feat : image repo api 文档
